# hoofade

./: .cursorignore  .env.example  .gitignore  README.md  pyproject.toml  run.sh  setup-dev.sh  setup.sh
src/: build_static.py  config.py  database.py  main.py
src/formatters/: base.py  message_splitter.py  portfolio.py  trade.py
src/models/: db_message.py  db_portfolio.py  db_trade.py  instrument.py  message.py  position.py  trade.py
src/services/: position_service.py  trade_bucket_manager.py  trade_processor.py  trade_service.py
src/sinks/: base.py  cli.py  database.py  factory.py  message_publisher.py  twitter.py
src/sources/: base.py  factory.py  flex_client.py  ibkr.py  ibkr_json_source.py  ibkr_parser.py  json_source.py  parser.py
src/utils/: datetime_utils.py  static_utils.py
src/web/: server.py
src/web/static/: index.html
src/web/static/css/: styles.css
src/web/static/js/: app.js
src/web/templates/: index.html
tests/: conftest.py  test_cli_sink.py  test_formatters.py  test_integration.py  test_json_source.py  test_message_splitter.py  test_portfolio_formatter.py  test_position.py  test_position_service.py  test_sinks.py  test_sources.py  test_trade_service.py
tests/test_data/: portfolio_20250129_183803.json  portfolio_20250129_183803.xml  trades_20250129_183807.json  trades_20250129_183807.xml
web/static/css/: styles.css
