[tool.poetry]
name = "xtrades"
version = "0.1.0"
description = ""
authors = ["Mohammad Dashti <mdashti@gmail.com>"]
readme = "README.md"
packages = [
    { include = "xtrades", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]