[tool.poetry]
name = "xtrades"
version = "0.1.0"
description = ""
authors = ["Mohammad Dashti <mdashti@gmail.com>"]
readme = "README.md"
packages = [
    { include = "xtrades", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ib-insync = "^0.9.86"
pymongo = "^4.10.1"
bson = "^0.5.10"
python-dateutil = "^2.9.0.post0"
configparser = "^7.1.0"
yfinance = "^0.2.52"
ratelimit = "^2.2.1"
google = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]